[package]
name = "patellite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest =    { version = "0.11",    features = ["json"]    }
tokio =      { version = "1",       features = ["full"]    }
serde =      { version = "1.0.101", features = ["derive"]  }
serde_json = { version = "1.0",     features = ["default"] }
redis =      { version = "0.21.5",  features = ["default"] }
chrono =     { version = "0.4",     features = ["default"] }
